--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BandActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".BandActivity" />
         <activity android:name=".MusicianActivity" />
         <activity android:name=".ChoiceActivity" />
         <activity android:name=".BandRegistrationActivity" />
